--- a/public/css/signStyle.css
+++ b/public/css/signStyle.css
@@ -13,7 +13,6 @@ a{
     width:100%;
     height:45px;
     border:1px solid lightblue;
-    background:url('../public/image/grey.jpg');
 }
 .sign_head_url{
     list-style:none;
@@ -101,6 +100,7 @@ a{
     opacity:0.7;
     background:orange;
     text-align: center;
+    border:3px solid orange;
     display:none;
 }
 .welcome div:first-child{
