--- a/public/css/signStyle.css
+++ b/public/css/signStyle.css
@@ -45,8 +45,10 @@ a{
     float:left;
     width:44px;
     height:44px;
-    margin: 2px 2px 2px 2px ;
+    margin: 2px 2px 2px 2px;
+    line-height: 40px;
 }
+
 .sign_head_url li:first-child img{
     width:40px;
 }
@@ -94,6 +96,7 @@ a{
     border-left:0px solid #fff;
 }
 .welcome{
+    position:absolute;
     width:100%;
     height:180px;
     z-index:100;
@@ -128,4 +131,18 @@ a{
 #succ_address{
     font-size: 20px;
     color:#b6483c;
+}
+.login_div{
+    width:300px;
+    height:140px;
+    margin-top: 20px;
+}
+.login_div div{
+    margin-top: 10px;
+}
+.login_div input{
+    height: 50px;
+}
+.sign_login_info{
+    color:red;
 }
